--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -28,6 +28,7 @@
         <div id="oauth">
         </div>
         <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
+        <button class="btn btn-default" id="obtain-info">Obtain current playing</button>
       </div>
     </div>
 
@@ -134,6 +135,24 @@
               });
             });
           }, false);
+          document.getElementById('obtain-info').addEventListener('click', function() {
+            $.ajax({
+              url: '/current-playing',
+              data: {
+                'access_token': access_token
+              }
+            }).done(function(data) {
+              var track_name = data.response.body.item.name
+              var track_artists = data.response.body.item.artists
+              var name = new SpeechSynthesisUtterance(track_name);
+              window.speechSynthesis.speak(name);
+              
+              track_artists.forEach(element => {
+                var artist = new SpeechSynthesisUtterance(element.name);
+                window.speechSynthesis.speak(artist);
+              });
+            })
+          })
         }
       })();
     </script>
